# semantic_inference

./: .gitignore  README.md
docs/: closed_set.md
semantic_inference/: CMakeLists.txt
semantic_inference/cmake/: config.h.in
semantic_inference/src/: segmenter.cpp
semantic_inference_ros/launch/: semantic_inference.launch
